<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>multi_robot_state_publisher</name>
  <version>1.13.7</version>
  <description>
    An upgraded robot_state_publisher for handling multiple robots.
  </description>

  <maintainer email="ryan@rwsinnet.com">Ryan Sinnet</maintainer>
  <license>BSD</license>
  <url>http://wiki.ros.org/robot_state_publisher</url>

  <author email="isucan@gmail.com">Ioan Sucan</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <author email="wim@willowgarage.com">Wim Meeussen</author>
  <author email="ryan@rwsinnet.com">Ryan SInnet</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend version_gte="1.3.0">orocos_kdl</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>

  <exec_depend>catkin</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend version_gte="1.3.0">orocos_kdl</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_kdl</exec_depend>

  <test_depend>rostest</test_depend>

  <export />
</package>
